fix: add Kong routes for sync-server API endpoints
The haex-vault app calls /auth/login which is a custom endpoint on
the sync-server, not a GoTrue endpoint. Kong needs to proxy these
requests to sync-server:3002.

Added routes for:
- /auth/login, /auth/signup -> sync-server auth endpoints
- /sync, /vault, /vaults -> sync-server API endpoints

--- a/docker/kong/sync-kong.yml
+++ b/docker/kong/sync-kong.yml
@@ -50,6 +50,33 @@ services:
       - name: cors
 
   ## ==========================================================================
+  ## SYNC SERVER API
+  ## Proxy all /auth/login and /sync/* routes to the sync-server
+  ## ==========================================================================
+  - name: sync-server-auth
+    url: http://sync-server:3002/auth
+    routes:
+      - name: sync-server-auth
+        strip_path: true
+        paths:
+          - /auth/login
+          - /auth/signup
+    plugins:
+      - name: cors
+
+  - name: sync-server-api
+    url: http://sync-server:3002
+    routes:
+      - name: sync-server-api
+        strip_path: false
+        paths:
+          - /sync
+          - /vault
+          - /vaults
+    plugins:
+      - name: cors
+
+  ## ==========================================================================
   ## Health check
   ## ==========================================================================
   - name: health
