fix: correct Kong route for sync-server auth endpoint
Keep the full path when proxying /auth/login and /auth/signup to
sync-server. With strip_path: false, the request preserves the original
path segment so it reaches sync-server:3002/auth/login correctly.

--- a/docker/kong/sync-kong.yml
+++ b/docker/kong/sync-kong.yml
@@ -54,10 +54,10 @@ services:
   ## Proxy all /auth/login and /sync/* routes to the sync-server
   ## ==========================================================================
   - name: sync-server-auth
-    url: http://sync-server:3002/auth
+    url: http://sync-server:3002
     routes:
       - name: sync-server-auth
-        strip_path: true
+        strip_path: false
         paths:
           - /auth/login
           - /auth/signup
