fix(ci): rename binary from haex-space to haex-vault

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -158,7 +158,7 @@ jobs:
           if gh run download "$RUN_ID" --repo haex-space/haex-vault --name haex-vault-linux-e2e 2>/dev/null; then
             echo "Successfully downloaded pre-built haex-vault binary"
             ls -la
-            chmod +x haex-space 2>/dev/null || true
+            chmod +x haex-vault 2>/dev/null || true
           else
             echo "Could not download artifact, will build from source"
             cd /
@@ -172,11 +172,11 @@ jobs:
           USE_PREBUILT_SYNC_SERVER="false"
 
           # Check if haex-vault binary was downloaded (check for actual file, not just directory)
-          if [ -f "./docker/prebuilt/haex-vault/haex-space" ]; then
+          if [ -f "./docker/prebuilt/haex-vault/haex-vault" ]; then
             echo "Found pre-built haex-vault binary"
             ls -la ./docker/prebuilt/haex-vault/
             USE_PREBUILT_VAULT="true"
-            chmod +x ./docker/prebuilt/haex-vault/haex-space
+            chmod +x ./docker/prebuilt/haex-vault/haex-vault
           else
             echo "No pre-built haex-vault binary found, will build from source"
             # Clean up empty directory if it exists
