--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "versions:from-project": "source scripts/fetch-project-versions.sh"
   },
   "devDependencies": {
-    "@haex-space/vault-sdk": "github:haex-space/vault-sdk",
+    "@haex-space/vault-sdk": "^2.5.106",
     "@playwright/test": "^1.49.0",
     "@types/node": "^25.0.3",
     "@types/ws": "^8.5.13",
